--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Prettier check
         run: npm run format:check
+      
+      - name: Test
+        run: npm test
 
       # keep a simple final step so the job has a clear success output
       - name: Verify
