--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "build": "echo \"(بعداً: تبدیل TypeScript به JavaScript)\"",
-    "test": "echo \"(بعداً: اجرای تست‌ها)\"",
+    "test": "vitest run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format:check": "prettier -c .",
     "format:write": "prettier -w .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:watch": "vitest"
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
@@ -28,8 +29,10 @@
     "@eslint/js": "^9.33.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "vitest": "^3.2.4"
   }
 }
