Feat/ci setup (#1)
* chore(eslint): migrate to ESLint v9 flat config And test: add vitest and basic smoke test; ci: run tests

* set prettier

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Prettier check
         run: npm run format:check
 
+      - name: Test
+        run: npm test
+
       # keep a simple final step so the job has a clear success output
       - name: Verify
         run: node -e "console.log('CI OK')"
