--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "build": "echo \"(بعداً: تبدیل TypeScript به JavaScript)\"",
-    "test": "echo \"(بعداً: اجرای تست‌ها)\"",
+    "test": "vitest run",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "format": "prettier -w .",
     "format:check": "prettier -c .",
     "format:write": "prettier -w .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test:watch": "vitest"
   },
   "lint-staged": {
-    "*.{js,json,css,md}": [
-      "eslint --fix",
-      "prettier -w"
+    "*.{js,jsx,ts,tsx,mjs,cjs}": [
+      "eslint --max-warnings=0 --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,mdx,yml,yaml,css,scss,html}": [
+      "prettier --write"
     ]
   },
   "dependencies": {
@@ -28,8 +33,10 @@
     "@eslint/js": "^9.33.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.3.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "vitest": "^3.2.4"
   }
 }
